:memo: updated adapters to include tacheuchi and liebherr
