# fastapi-master-api/app/api/models/base_liebherr_lidat_adapter.py
@@ -1,0 +1,27 @@
+# coding: utf-8
+
+from __future__ import annotations
+
+import re  # noqa: F401
+from datetime import date, datetime  # noqa: F401
+from typing import Any, Dict, List, Optional  # noqa: F401
+
+from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
+
+
+class BaseLiebherrLidatAdapter(BaseModel):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+
+    BaseLiebherrLidatAdapter - a model defined in OpenAPI
+
+        username: The username of this BaseLiebherrLidatAdapter.
+        password: The password of this BaseLiebherrLidatAdapter.
+    """
+
+    username: str
+    password: str
+
+
+BaseLiebherrLidatAdapter.update_forward_refs()
